--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: GeoStorm Predictor
-email: your-email@domain.com
+email: hello@fabianalvarez.dev
 description: >- # this means to ignore newlines until "baseurl:"
   GeoStorm Predictor is a project that is predict Kp index from solar wind data.
 baseurl: "/PageSA" # the subpath of your site, e.g. /blog
