--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: GeoStorm Predictor
 email: hello@fabianalvarez.dev
 description: >- # this means to ignore newlines until "baseurl:"
-  GeoStorm Predictor is a project that is predict Kp index from solar wind data.
+  GeoStorm Predictor is a project that predict Kp index from solar wind data.
 baseurl: "/PageSA" # the subpath of your site, e.g. /blog
 url: "/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
